@@ -9,6 +9,8 @@ import com.c109.chaintoon.domain.goods.entity.Goods;
 import com.c109.chaintoon.domain.goods.exception.GoodsNotFoundException;
 import com.c109.chaintoon.domain.goods.repository.GoodsRepository;
 import com.c109.chaintoon.domain.goods.specification.GoodsSpecification;
+import com.c109.chaintoon.domain.search.code.SearchType;
+import com.c109.chaintoon.domain.search.dto.response.SearchResponseDto;
 import com.c109.chaintoon.domain.user.entity.User;
 import com.c109.chaintoon.domain.user.exception.UserIdNotFoundException;
 import com.c109.chaintoon.domain.user.repository.UserRepository;
@@ -42,6 +44,7 @@ public class GoodsService {
                 .userId(goods.getUserId())
                 .webtoonId(goods.getWebtoonId())
                 .goodsName(goods.getGoodsName())
+                .description(goods.getDescription())
                 .goodsImage(s3Service.getPresignedUrl(goods.getGoodsImage()))
                 .build();
     }
@@ -49,8 +52,13 @@ public class GoodsService {
     // 굿즈 등록
     public GoodsResponseDto createGoods(Integer userId, GoodsRequestDto goodsRequestDto, MultipartFile goodsImage) {
         // 웹툰 조회
-        webtoonRepository.findById(goodsRequestDto.getWebtoonId())
+        Webtoon webtoon = webtoonRepository.findById(goodsRequestDto.getWebtoonId())
                 .orElseThrow(() -> new WebtoonNotFoundException(goodsRequestDto.getWebtoonId()));
+
+        // 웹툰 작가만 등록 가능
+        if (!webtoon.getUserId().equals(userId)) {
+            throw new UnauthorizedAccessException("웹툰 작가만 굿즈를 등록할 수 있습니다.");
+        }
 
         // 유저 조회
         userRepository.findById(userId)
@@ -61,6 +69,7 @@ public class GoodsService {
                 .userId(userId)
                 .webtoonId(goodsRequestDto.getWebtoonId())
                 .goodsName(goodsRequestDto.getGoodsName())
+                .description(goodsRequestDto.getDescription())
                 .build();
 
         // 굿즈 저장
@@ -166,7 +175,7 @@ public class GoodsService {
     }
 
     // 굿즈 검색
-    public List<GoodsResponseDto> searchGoods(int page, int pageSize, String keyword) {
+    public SearchResponseDto<GoodsResponseDto> searchGoods(int page, int pageSize, String keyword) {
         Pageable pageable = PageRequest.of(page - 1, pageSize, getSort("latest"));
 
         // 키워드에 대해 제목이 포함되는 조건을 specification으로 구성
@@ -175,9 +184,13 @@ public class GoodsService {
 
         Page<Goods> resultPage = goodsRepository.findAll(spec, pageable);
 
-        return resultPage.getContent().stream()
-                .map(this::toGoodsResponseDto)
-                .collect(Collectors.toList());
+        return SearchResponseDto.<GoodsResponseDto>builder()
+                .type(SearchType.GOODS.getValue())
+                .totalCount(resultPage.getTotalElements())
+                .searchResult(resultPage.getContent().stream()
+                        .map(this::toGoodsResponseDto)
+                        .toList())
+                .build();
     }
 
     private Sort getSort(String orderBy) {
